// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test DpiInfo should render correctly 1`] = `
<div>
  <div
    class="container"
  >
    <i>
      Engraving Resolution
      : 
      125
       DPI
    </i>
  </div>
</div>
`;

exports[`test DpiInfo should render correctly 2`] = `
<div>
  <div
    class="container"
  >
    <i>
      Engraving Resolution
      : 
      500
       DPI
    </i>
  </div>
</div>
`;

exports[`test DpiInfo should render correctly in mobile 1`] = `
<div>
  <div
    class="container mobile"
  >
    <i>
      Engraving Resolution
      : 
      2000
       DPI
    </i>
  </div>
</div>
`;
